<resources>
    <string name="app_name">Map test project</string>
    <string name="title_activity_maps">Map</string>
    <string name="error">Error! </string>
    <string name="close">Закрыть</string>
    <string name="humidity">Humidity -"  "</string>
    <string name="location">Location -"  "</string>
    <string name="pressure">Pressure -"  "</string>
    <string name="date">Date -"  "</string>
    <string name="number">Number -"  "</string>
    <string name="weather_condition">Weather condition -"  "</string>
    <string name="weather">Weather</string>
    <string name="show_list_requests">Показать список запросов</string>
    <string name="my_location">Моя локация</string>
    <string-array name="map_types">
        <item>None</item>
        <item>Normal</item>
        <item>Satellite</item>
        <item>Terrain</item>
        <item>Hybrid</item>
    </string-array>
</resources>
